fix: icons not showing when using non English language

--- a/user.css
+++ b/user.css
@@ -1530,31 +1530,33 @@ option {
   height: 22px !important;
 }
 
-.main-repeatButton-button[aria-label="Enable repeat"]{
+/* Disabled */
+.main-repeatButton-button[aria-checked="false"]{
   -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_repeat_all_off_24_regular.svg');
   background-color: var(--spice-subtext) !important;
   height: 22px !important; 
 }
-
-.main-repeatButton-button{
+/* Repeat one */
+.main-repeatButton-button[aria-checked="true"]{
+  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_repeat_all_once_24_filled.svg') !important;
+  background-color: var(--spice-text) !important;
+  height: 22px !important;
+}
+/* Repeat all */
+.main-repeatButton-button[aria-checked="mixed"]{
   -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_repeat_all_24_filled.svg');
   background-color: var(--spice-text) !important;
   height: 22px !important;
 }
 
-.main-repeatButton-button[aria-label="Disable repeat"]{
-  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_repeat_all_once_24_filled.svg') !important;
-  background-color: var(--spice-text) !important;
-  height: 22px !important;
-}
-
+/* Shuffle disabled */
 .main-shuffleButton-button {
   -webkit-mask-image: url('./phosphor-icons/shuffle.svg');
   background-color: var(--spice-subtext) !important;
   height: 22px !important;
 }
-
-.main-shuffleButton-button[aria-label="Disable shuffle"] {
+/* Shuffle enabled */
+.main-shuffleButton-button[aria-checked="true"] {
   -webkit-mask-image: url('./phosphor-icons/shuffle-bold.svg');
   background-color: var(--spice-text) !important;
   height: 22px !important;
